# Changelog

#fmenzel 12.01.2020
rewritten old SAS/C helper functions to make the code compileable with gcc.
replaced AmiTCP code by AmigaOS4 Roadshow code
replaced the old Reqtools requesters with native AmigaOS4
ClassAct Gui replaced by AmigaOS4 Reaction
outdated DOS code has been replaced by newer AmigaOS4 versions and is therefore ready for larger files >4GB
#

#fmenzel 18.01.2020
new Amiga OS4 about window 
added credits infos in the main start window and replaced the planar image with a 32bit png image.
File and full directory download now works correctly 
#
#fmenzel 19.01.2020
Window size and position set to better values at first start
Fixed crash when adding a new entry in the hotlist menu
Window position reset if only hotlist has changed fixed
Prefs header struct has now amiga alignment
Added support for recursive upload of directories