@@ -1,6 +1,6 @@
 #define VERSION		1
-#define REVISION	843
-#define DATE		"12.1.2020"
-#define VERS		"AmiFTP 1.843"
-#define VSTRING		"AmiFTP 1.843 (12.1.2020)\r\n"
-#define VERSTAG		"\0$VER: AmiFTP 1.843 (12.1.2020)"
+#define REVISION	844
+#define DATE		"21.1.2020"
+#define VERS		"AmiFTP 1.844"
+#define VSTRING		"AmiFTP 1.844 (21.1.2020)\r\n"
+#define VERSTAG		"\0$VER: AmiFTP 1.844 (21.1.2020)"
