@@ -19,3 +19,7 @@ Fixed crash when adding a new entry in the hotlist menu
 Window position reset if only hotlist has changed fixed
 Prefs header struct has now amiga alignment
 Added support for recursive upload of directories
+#
+#fmenzel 21.01.2020 bumprev
+remotepath should now be correct if uploading a dirtree
+ 
